// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberInputField > should render correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:hover,
.emotion-6:not([aria-disabled='true']) .emotion-14:focus {
  border: 1px solid #792dd4;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-11 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-15 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-15::-webkit-outer-spin-button,
.emotion-15::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-15::-webkit-input-placeholder {
  color: #727683;
}

.emotion-15::-moz-placeholder {
  color: #727683;
}

.emotion-15:-ms-input-placeholder {
  color: #727683;
}

.emotion-15::placeholder {
  color: #727683;
}

.emotion-15[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-17 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-20:hover,
.emotion-20:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-22 {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-22 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-8 emotion-9 emotion-10"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-13 emotion-14"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-15 emotion-16"
                id="«r0»"
                name="test"
                style="width: 16px;"
                type="number"
                value="0"
              />
              <span
                class="emotion-17 emotion-18"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-8 emotion-20 emotion-10"
              type="button"
            >
              <svg
                class="emotion-22 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should render correctly disabled 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:hover,
.emotion-6:not([aria-disabled='true']) .emotion-14:focus {
  border: 1px solid #792dd4;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-11 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-11 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-15 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-15::-webkit-outer-spin-button,
.emotion-15::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-15::-webkit-input-placeholder {
  color: #727683;
}

.emotion-15::-moz-placeholder {
  color: #727683;
}

.emotion-15:-ms-input-placeholder {
  color: #727683;
}

.emotion-15::placeholder {
  color: #727683;
}

.emotion-15[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-17 {
  color: #b5b7bd;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            aria-disabled="true"
            class="emotion-6 emotion-7"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-8 emotion-9 emotion-10"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-13 emotion-14"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-15 emotion-16"
                disabled=""
                id="«r5»"
                name="test"
                style="width: 32px;"
                type="number"
                value="10"
              />
              <span
                class="emotion-17 emotion-18"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-8 emotion-9 emotion-10"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should trigger event onMinCrossed & onMaxCrossed 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:hover,
.emotion-6:not([aria-disabled='true']) .emotion-14:focus {
  border: 1px solid #792dd4;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-9:hover,
.emotion-9:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-11 {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-11 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-15 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-15::-webkit-outer-spin-button,
.emotion-15::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-15::-webkit-input-placeholder {
  color: #727683;
}

.emotion-15::-moz-placeholder {
  color: #727683;
}

.emotion-15:-ms-input-placeholder {
  color: #727683;
}

.emotion-15::placeholder {
  color: #727683;
}

.emotion-15[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-17 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  color: #d8c5fc;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-20:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-22 {
  vertical-align: middle;
  fill: #d8c5fc;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-22 .fillStroke {
  stroke: #d8c5fc;
  fill: none;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-8 emotion-9 emotion-10"
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-13 emotion-14"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-15 emotion-16"
                id="«rf»"
                name="test"
                style="width: 32px;"
                type="number"
                value="20"
              />
              <span
                class="emotion-17 emotion-18"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-8 emotion-20 emotion-10"
              disabled=""
              type="button"
            >
              <svg
                class="emotion-22 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`NumberInputField > should trigger events correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: contents;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.5rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0.25rem;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-6 {
  background-color: #ffffff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
}

.emotion-6[data-error='true'] {
  border: 1px solid #b3144d;
}

.emotion-6[aria-disabled='true'] {
  background: #f3f3f4;
  cursor: not-allowed;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:hover,
.emotion-6:not([aria-disabled='true']) .emotion-14:focus {
  border: 1px solid #792dd4;
}

.emotion-6:not([aria-disabled='true']) .emotion-14:focus-within {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
  border: 1px solid #792dd4;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  position: relative;
  height: 2rem;
  padding: 0 0.5rem;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 0.5rem;
  border-radius: 0.25rem;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 0.875rem;
  font-family: Inter,Asap,sans-serif;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 1.25rem;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: none;
  color: #641cb3;
  margin: 0 0.5rem;
  width: 32px;
  height: 32px;
}

.emotion-9:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9:active {
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.emotion-9:hover,
.emotion-9:active {
  background: #e5dbfd;
  color: #521094;
}

.emotion-11 {
  vertical-align: middle;
  fill: #641cb3;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.emotion-11 .fillStroke {
  stroke: #641cb3;
  fill: none;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  max-width: 100%;
}

.emotion-15 {
  color: #3f4250;
  background-color: transparent;
  font-size: 1rem;
  border: none;
  outline: none;
  position: relative;
  margin-right: 0.25rem;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
  -moz-appearance: textfield;
}

.emotion-15::-webkit-outer-spin-button,
.emotion-15::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.emotion-15::-webkit-input-placeholder {
  color: #727683;
}

.emotion-15::-moz-placeholder {
  color: #727683;
}

.emotion-15:-ms-input-placeholder {
  color: #727683;
}

.emotion-15::placeholder {
  color: #727683;
}

.emotion-15[disabled] {
  color: #b5b7bd;
  cursor: not-allowed;
}

.emotion-17 {
  color: #3f4250;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  margin-right: 0.5rem;
}

<div
    data-testid="testing"
  >
    <form
      class="emotion-0 emotion-1"
      novalidate=""
    >
      <div
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-3"
        >
          <div
            aria-disabled="false"
            class="emotion-6 emotion-7"
            data-error="false"
          >
            <button
              aria-label="Minus"
              class="emotion-8 emotion-9 emotion-10"
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M3.75 7a.75.75 0 0 0 0 1.5h8.5a.75.75 0 0 0 0-1.5z"
                />
              </svg>
            </button>
            <div
              aria-live="assertive"
              class="emotion-13 emotion-14"
              role="status"
            >
              <input
                aria-label="Number Input"
                class="emotion-15 emotion-16"
                id="«ra»"
                name="test"
                style="width: 32px;"
                type="number"
                value="10"
              />
              <span
                class="emotion-17 emotion-18"
              />
            </div>
            <button
              aria-label="Plus"
              class="emotion-8 emotion-9 emotion-10"
              type="button"
            >
              <svg
                class="emotion-11 emotion-12"
                viewBox="0 0 20 20"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
